unify and spread into more parsers